fix bug hiden history search: overflow:hiden

--- a/assets/css/main-header.css
+++ b/assets/css/main-header.css
@@ -427,7 +427,6 @@
         padding: 4px 16px;
         position: relative;
         justify-content: flex-end;
-        overflow: hidden;
         margin-right: -20px;
     }
     
